--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,30 +1,41 @@
 name: CI/CD Project
+
 on:
   push:
     branches: [main]
   pull_request:
     branches: [main]
+
 jobs:
   init:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version: [20.x]
+
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
+
       - name: Install dependencies
-      - run: npm ci
+        run: npm ci
+
       - name: Build
-      - run: npm run build
+        run: npm run build
+
       - name: Run tests
-      - run: npm run test
+        run: npm run test
+
       - name: Run E2E tests
-      - run: npm run e2e
+        run: npm run e2e
+
       - name: Lint check
-      - run: npm run lint
+        run: npm run lint
+
       - name: Type check
-      - run: npm run typecheck
+        run: npm run typecheck
